extends Node

@onready var Locked = $Locked
@onready var Idle = $Idle
@onready var Run = $Run
@onready var Jump = $Jump
@onready var JumpPeak = $JumpPeak
@onready var WallJump = $WallJump
@onready var Fall = $Fall
@onready var WallGrab = $WallGrab
@onready var WallClimb = $WallClimb
@onready var WallSlide = $WallSlide
@onready var Dash = $Dash

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func _draw():
	pass


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	pass
